tests/compiler/downlevelLetConst4/index.ts
// From `github.com/microsoft/TypeScript/blob/v6.0.2/tests/cases/compiler/downlevelLetConst4.ts`, Apache-2.0 License

//@compiler-options: target=es2015
const a: number
//~^ ERROR: Declarations must be initialized.